# adaptive-neural-compilation

./: README.md
adaptation/: CMakeLists.txt  Makefile  README.md  init.lua  layers.lua  nc-scm-1.rockspec  ops.lua  optim.lua  test.lua  utils.lua
adaptation/cli/: eval.lua  gnc.lua  plot.lua  run_xp.lua  train.lua
adaptation/decompiler/: decompiler.lua
adaptation/examples/: access.lua  bubble_sort.lua  copy.lua  default.lua  dijkstra.lua  increment.lua  linearsearch.lua  listSearch.lua  listk.lua  loopy_add.lua  merge.lua  permutation.lua  reverse.lua  swap.lua  walkBST.lua
adaptation/layers/: algCrit.lua  dRAM.lua  initialModule.lua  machine.lua
adaptation/ops/: add_op.lua  dec_op.lua  inc_op.lua  jez_op.lua  max_op.lua  min_op.lua  read_op.lua  stop_op.lua  sub_op.lua  write_op.lua  zero_op.lua
adaptation/optim/: adam.lua  infinity_prior.lua  priors.lua  sgd.lua  softmaxed_prior.lua
adaptation/paper-experiment/: run-experiments.sh
adaptation/utils/: distUtils.lua  plotter.lua  trainer.lua
compilation/: .gitignore  README.md  neulang-compiler.cabal
compilation/src/: AsmWriter.hs  DRam-template.lua  Main.hs  NeulangLexer.x  NeulangParser.y  NeulangTransformerAST.hs  TorchNetWriter.hs
compilation/tests/: add-number.nl  bubble.nl  copy.nl  dijkstra.nl  linearsearch.nl  listk-biased.nl  listk.nl
